# qwen3-swallow-8B-RL-v0.2-AWQ-INT4-joryu-pipline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.api  Dockerfile.job  Dockerfile.judge  Dockerfile.vllm-base  README.md  config.nothinking.yaml  config.yaml  docker-compose.yml  pyproject.toml  styles.yaml  tools.yaml
.github/ISSUE_TEMPLATE/: design.md
.github/workflows/: ci.yml
dashboard/: .dockerignore  .gitignore  Dockerfile  knip.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
dashboard/scripts/: gen-types.mjs
docs/: architecture.md  chat.md  health-screening-calibration.md  health-screening.md  module-retention-decisions.md  requirements.md  seed_gen.md  sft-consumer.md
docs/adr/: 0001-chat-session-store-concurrency.md  0002-chat-true-token-streaming.md  0003-deprecate-joryu-llm-serve.md  0004-cli-compat-flags.md  0005-multi-llm-profiles.md
docs/notes/: joryu-vllm-base-progress.md
prompts/: health_rubric.ja.txt  prompt_health_rubric.ja.txt
scripts/: build-vllm-base.sh  calibrate_thresholds.py  check.sh  check_coverage.sh  install-pinact-windows.sh  judge_bias_check.py  judge_entrypoint.sh  lint_jsonl.py  migrate_csv_to_jsonl.py  probe_vllm_limits.py  seed_gen.sh  setup-dev.sh  verify_distill_quality.sh  verify_pipeline.sh  verify_record_replay.py  verify_style_format.py  vllm_base_smoke.py  vllm_base_torch_stack.py
scripts/seeds/: training_prompts.jsonl.zst
src/joryu/: __init__.py  atomic_io.py  browser.py  completion_normalize.py  compose.py  compose_invoke.py  config.py  config_resolver.py  container.py  dashboard_json.py  datetime_context.py  distill.py  distill_live.py  distill_retry.py  docker_delegate.py  docker_paths.py  docker_runtime.py  export.py  hard_deadline.py  http_client.py  job_process.py  llm_server.py  logging_config.py  mcp_runtime.py  migrate.py  paths.py  preflight.py  progress.py  progress_reporter.py  prompt_bank.py  prompt_dedup.py  readiness.py  record_replay.py  responses_store.py  stats.py  style_format.py  styles.py  system_prompt.py  tool_call_recovery.py  tool_calls.py  (+12 more)
tests/: conftest.py  test_api_chat.py  test_api_compose_preflight.py  test_api_curate.py  test_api_dashboard.py  test_api_jobs.py  test_api_search.py  test_api_seed_gen.py  test_api_system.py  test_atomic_io.py  test_browser.py  test_calibrate_thresholds.py  test_chat_generate_retry.py  test_chat_persistence.py  test_chat_session_store.py  test_chat_sse.py  test_chat_streamer.py  test_cli_api.py  test_cli_distill.py  test_cli_export.py  test_cli_mcp_serve.py  test_cli_stats.py  test_cli_up_down.py  test_completion_normalize.py  test_compose.py  test_compose_invoke.py  test_compose_profiles.py  test_compose_vllm_serve.py  test_config.py  test_container_schema_sse.py  test_coverage_config.py  test_dashboard_json.py  test_datetime_context.py  test_distill.py  test_distill_context_fallback.py  test_distill_live.py  test_distill_pipeline.py  test_distill_quality_regression.py  test_distill_retry.py  test_distill_tool_loop.py  (+75 more)
tests/api/: test_chat_sse_heartbeat.py
tests/chat/: test_dashboard_stats_refresh.py  test_persistence_tool_meta.py  test_think_leak_persistence.py  test_thinking_runaway.py  test_tool_error_propagation.py  test_tool_loop_retry_cap.py  test_tool_loop_timeout.py
tests/curate/: test_best_of_n.py  test_cache.py  test_cli_curate.py  test_cli_screening.py  test_cli_screening_prompt_bank.py  test_config_curate.py  test_judge_clients.py  test_loader.py  test_meta.py  test_minhash_index.py  test_pipeline_stages.py  test_progress.py  test_prompt_loader.py  test_record_hash.py  test_scoring.py  test_scoring_screening.py  test_signals_health.py  test_signals_llm_judge.py  test_signals_llm_judge_health.py  test_signals_llm_judge_prompt_health.py  test_signals_quality.py  test_signals_stat.py  test_signals_tool_use.py  test_stats.py  test_stats_screening.py  test_style_violation_filter.py  test_writer.py
tests/e2e/: test_chat_session_management.py  test_chat_weather.py  test_workflow.py
tests/helpers/: jsonl.py
tests/ops/: test_joryu_up_links.py
tests/orchestrator/: test_compose_backend.py  test_factory.py  test_file_lock.py  test_required.py  test_service.py  test_state.py
tests/seed_gen/: test_cli.py  test_config.py  (+6 more)
(+205 files in other folders)
