[project]
name = "joryu"
version = "0.1.0"
description = "Qwen3-Swallow-8B-RL-v0.2-AWQ-INT4 (joryu) data distillation pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "datasketch>=1.6",
    "pyyaml>=6.0",
    "zstandard>=0.22",
]

[project.scripts]
joryu-distill = "joryu.cli.distill:main"
joryu-export = "joryu.cli.export:main"
joryu-stats = "joryu.cli.stats:main"
joryu-curate = "joryu.cli.curate:main"
joryu-up = "joryu.cli.up:main"
joryu-down = "joryu.cli.down:main"
joryu-serve = "joryu.cli.serve:main"
joryu-api = "joryu.cli.api:main"
joryu-probe-vllm = "joryu.cli.probe_vllm:main"

[project.optional-dependencies]
vllm = [
    "vllm>=0.8",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/joryu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
