[project]
name = "joryu"
version = "0.1.0"
description = "Qwen3-Swallow-8B-RL-v0.2-AWQ-INT4 (joryu) data distillation pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "beautifulsoup4>=4.12",
    "datasketch>=1.6",
    "httpx>=0.27",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
    "zstandard>=0.22",
]

[project.scripts]
joryu-distill = "joryu.cli.distill:main"
joryu-export = "joryu.cli.export:main"
joryu-stats = "joryu.cli.stats:main"
joryu-curate = "joryu.cli.curate:main"
joryu-up = "joryu.cli.up:main"
joryu-down = "joryu.cli.down:main"
joryu-serve = "joryu.cli.serve:main"
joryu-api = "joryu.cli.api:main"
joryu-probe-vllm = "joryu.cli.probe_vllm:main"
joryu-mcp = "joryu.cli.mcp_serve:main"

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
vllm = [
    "vllm>=0.8",
]
search = [
    "rank-bm25>=0.2",
]
api = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
    "rank-bm25>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "respx>=0.22",
    "ruff>=0.6",
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
    "rank-bm25>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/joryu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
markers = [
    "e2e_chat: chat weather freeze regression scenarios (#207)",
]

[tool.coverage.run]
source = ["joryu"]
relative_files = true

[tool.coverage.report]
fail_under = 88
show_missing = true
precision = 0

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "T20"]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T20"]
